--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p>Clipboard allows you to track and organize everything you 
         copy. Instantly access your clipboard on all your devices.
       </p>
-      <section class="buttons">
-        <p id="green-button">Download for iOS</p>
-        <p id="blue-button">Download for Mac</p>
-      </section>
+      <div class="buttons">
+        <p class="green-button">Download for iOS</p>
+        <p class="blue-button">Download for Mac</p>
+      </div>
     </header>
     <main>
       <section id="KeepTrack">
@@ -65,21 +65,21 @@
         <div class="advantages">
           <div class="advantage">
             <img src="images/icon-blacklist.svg" alt="blacklist">
-            <h4>Create blacklists</h4>
+            <h3>Create blacklists</h4>
             <p class="adv">Ensure sensitive information never makes
                its way to your clipboard by excluding certain sources.
             </p>
           </div>
           <div class="advantage">
             <img src="images/icon-text.svg" alt="text-snippets">
-            <h4>Plain text snippets</h4>
+            <h3>Plain text snippets</h4>
             <p class="adv">Remove unwanted formatting from copied text
                for a consistent look.
             </p>
           </div>
           <div class="advantage">
             <img src="images/icon-preview.svg" alt="preview">
-            <h4>Sneak preview</h4>
+            <h3>Sneak preview</h4>
             <p class="adv">Quick preview of all snippets on your Clipboard
                for easy access.
             </p>
@@ -109,10 +109,10 @@
            Download for Mac or iOS, sync with iCloud 
       and you’re ready to start adding to your clipboard.
         </p>
-        <section class="buttons">
-          <p id="green-button">Download for iOS</p>
-          <p id="blue-button">Download for Mac</p>
-        </section>
+        <div class="buttons">
+          <p class="green-button">Download for iOS</p>
+          <p class="blue-button">Download for Mac</p>
+        </div>
       </section>
     </main>
 </div>
